--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,6 +6,9 @@ metadata:
 spec:
   replicas: 1
   revisionHistoryLimit: 3
+  selector:
+    matchLabels:
+      app: nginx
   template:
     metadata:
       labels:
