--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,6 +1,8 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
+  annotations:
+    kubernetes.io/ingress.class: "gw-kong-enterprise-dev"
   labels:
     kubernetes.io/ingress.class: "gw-kong-enterprise-dev"
   name: ss-ocp-dev-nginx
