--- a/deployment.yaml
+++ b/deployment.yaml
@@ -13,6 +13,8 @@ spec:
     metadata:
       labels:
         app: nginx
+      annotations:
+        sidecar.istio.io/inject: 'true'
     spec:
       containers:
       - image: nginxdemos/hello:latest
